--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-modal": "^3.8.3",
     "@types/styled-components": "^4.1.19",
     "react-scripts": "3.1.1"
   }
