--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-hook-form": "^3.23.5",
     "react-modal": "^3.10.1",
     "styled-components": "^4.3.2",
     "typescript": "3.6.2"
